--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -26,20 +26,19 @@ spring.mail.properties.mail.smtp.writetimeout=10000
 spring.messages.basename=messages,ValidationMessages
 spring.messages.encoding=UTF-8
 spring.messages.use-code-as-default-message=true
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:local:no-payment}
+spring.profiles.active=${SPRING_PROFILE:local:no-payment}
 
 
 ai.gemini.api-key=${AI_GEMINI_API_KEY}
 ai.gemini.model=${AI_GEMINI_MODEL:gemini-2.5-pro}
 ai.gemini.enabled=${AI_GEMINI_ENABLED:true}
-ai.gemini.timeout-ms=${AI_GEMINI_TIMEOUT:60000}
-
+ai.gemini.timeout-ms=${AI_GEMINI_TIMEOUT_MS:60000}
 
 aws.s3.bucket=${AWS_S3_BUCKET}
 aws.s3.region=${AWS_S3_REGION}
-aws.accessKeyId=${AWS_ACCESS_KEY}
-aws.secretAccessKey=${AWS_SECRET_KEY}
-aws.s3.public-base-url=${AWS_S3_PUBLIC_URL}
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
+aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL}
 
 
 stripe.api.key=${STRIPE_API_KEY}
