--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.18",
+    "event-source-polyfill": "^1.0.31",
     "formik": "^2.4.6",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
