--- a/backend/Market_carbon/pom.xml
+++ b/backend/Market_carbon/pom.xml
@@ -228,11 +228,14 @@
 			<version>20231013</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.github.vladimir-bukhtoyarov</groupId>
+			<artifactId>bucket4j-core</artifactId>
+			<version>7.6.0</version>
+		</dependency>
 
 
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
