--- a/backend/Market_carbon/pom.xml
+++ b/backend/Market_carbon/pom.xml
@@ -227,13 +227,11 @@
 			<artifactId>json</artifactId>
 			<version>20231013</version>
 		</dependency>
-
-			<groupId>com.github.vladimir-bukhtoyarov</groupId>
+		<dependency>
+		<groupId>com.github.vladimir-bukhtoyarov</groupId>
 			<artifactId>bucket4j-core</artifactId>
 			<version>7.6.0</version>
 		</dependency>
-
-
 
 	</dependencies>
 
