--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -34,5 +34,5 @@ app.rate-limit.capacity=20
 app.rate-limit.refill=20
 app.rate-limit.duration-minutes=1
 
-payment_cancel_url=http://localhost:5173/wallet/cancel
-payment_success_url=http://localhost:5173/wallet?order_id=
+payment_cancel_url=https://localhost:5173/wallet/cancel
+payment_success_url=https://localhost:5173/wallet?order_id=
