--- a/backend/Market_carbon/Dockerfile
+++ b/backend/Market_carbon/Dockerfile
@@ -1,8 +1,20 @@
-FROM openjdk:17
+# Stage 1: Build
+FROM maven:3.9-eclipse-temurin-17 AS build
+WORKDIR /app
 
-ARG FILE_JAR=target/spring-rest-auth-vehicles-kyc-0.0.1-SNAPSHOT.jar
-ADD ${FILE_JAR} app.jar
+COPY pom.xml .
+# Cache dependency để build nhanh
+RUN --mount=type=cache,target=/root/.m2 mvn -q -B -DskipTests dependency:go-offline
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Chỉ copy mã nguồn runtime, không copy src/test
+COPY src/main ./src/main
 
+# skip cả compile & run test
+RUN --mount=type=cache,target=/root/.m2 mvn -q -B -DskipTests -Dmaven.test.skip=true clean package
+
+# Stage 2: Runtime
+FROM eclipse-temurin:17-jre
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8082
+ENTRYPOINT ["java","-jar","/app/app.jar"]
