--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -42,3 +42,14 @@ spring.security.oauth2.client.provider.google.authorization-uri=${SPRING_SECURIT
 spring.security.oauth2.client.provider.google.token-uri=${SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_GOOGLE_TOKEN_URI:https://oauth2.googleapis.com/token}
 spring.security.oauth2.client.provider.google.user-info-uri=${SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_GOOGLE_USER_INFO_URI:https://www.googleapis.com/oauth2/v3/userinfo}
 spring.security.oauth2.client.provider.google.user-name-attribute=${SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_GOOGLE_USER_NAME_ATTRIBUTE:email}
+
+app.rate-limit.capacity=20
+app.rate-limit.refill=20
+app.rate-limit.duration-minutes=1
+
+
+ai.vertex.enabled=${AI_VERTEX_ENABLED:true}
+ai.vertex.project-id=${AI_VERTEX_PROJECT_ID:}
+ai.vertex.location=${AI_VERTEX_LOCATION:us-central1}
+ai.vertex.model=${AI_VERTEX_MODEL:gemini-2.5-pro}
+ai.vertex.timeout-ms=${AI_VERTEX_TIMEOUT_MS:60000}
